objects/Mobile_Card__c.object
<CustomObject>
    <fields>
        <fullName>Time_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Total</label>
        <referenceTo>WorkIt2__Case_Time_Total__c</referenceTo>
        <relationshipLabel>Mobile Apps</relationshipLabel>
        <relationshipName>Mobile_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Magadan Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Islands Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korean Standard Time (Asia/Seoul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippine Time (Asia/Manila)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Saigon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time (Asia/Dacca)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Yekaterinburg Time (Asia/Yekaterinburg)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_in_Minutes__c</fullName>
        <formula>Time_Total__r.WorkIt2__Time_In_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Mobile_Events_Purchased__c</fullName>
        <formula>Contract_Account_New__r.Total_Number_of_Mobile_Events_Purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Mobile Events Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent_Case_Hrs__c</fullName>
        <label>TTS Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent_Event_Hrs__c</fullName>
        <description>Displays the total time spent on a event in Hrs based on the value of field "Minutes On Tasks" in Event</description>
        <label>TTS Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent_Hrs__c</fullName>
        <description>Sum of Total Time Spent on Activities of Mobile App</description>
        <formula>Total_Time_Spent_Event_Hrs__c + Total_Time_Spent_Task_Hrs__c  +  Total_Time_Spent_Case_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TTS Mobile App</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent_Task_Hrs__c</fullName>
        <label>TTS Task</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Onsite__c</fullName>
        <label>Type of Onsite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account review/CSR</fullName>
                </value>
                <value>
                    <fullName>General meeting</fullName>
                </value>
                <value>
                    <fullName>Onsite support for attendees</fullName>
                </value>
                <value>
                    <fullName>Product training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_event__c</fullName>
        <label>Type of Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alumni Events</fullName>
                </value>
                <value>
                    <fullName>Banquet</fullName>
                </value>
                <value>
                    <fullName>Board Meeting</fullName>
                </value>
                <value>
                    <fullName>Breakfast/Lunch/Dinners</fullName>
                </value>
                <value>
                    <fullName>Community Event</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Continuing Education</fullName>
                </value>
                <value>
                    <fullName>Corporate Meeting</fullName>
                </value>
                <value>
                    <fullName>Donations</fullName>
                </value>
                <value>
                    <fullName>Expo</fullName>
                </value>
                <value>
                    <fullName>Film Festival</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Food and Wine Event</fullName>
                </value>
                <value>
                    <fullName>Fundraiser/Auction</fullName>
                </value>
                <value>
                    <fullName>Galas</fullName>
                </value>
                <value>
                    <fullName>Golf Event</fullName>
                </value>
                <value>
                    <fullName>Happy Hour/Social Event/Networking</fullName>
                </value>
                <value>
                    <fullName>Incentive Travel Program</fullName>
                </value>
                <value>
                    <fullName>Internal Meetings</fullName>
                </value>
                <value>
                    <fullName>Literary/Film Festival</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Membership Renewal Campaign</fullName>
                </value>
                <value>
                    <fullName>Music Festival</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Festival</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Sporting Event</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>User Conference Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Mins__c</fullName>
        <label>UAT (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_Score__c</fullName>
        <label>UAT Score (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Understanding_your_needs__c</fullName>
        <label>Understanding your needs</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_is_booking_hotel__c</fullName>
        <label>Who is booking hotel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent Travel</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>N/A – the location is local</fullName>
                </value>
                <value>
                    <fullName>I do not know yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_booking_transportation__c</fullName>
        <label>Who is booking transportation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent Travel</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>N/A – the location is local</fullName>
                </value>
                <value>
                    <fullName>I do not know yet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_0_Platform_URL__c</fullName>
        <description>This field is created as part of QuickMobile Migration</description>
        <label>2.0 Platform URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Relationship_Representative__c</fullName>
        <label>Your Relationship Representative</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>a_API_Premium_Features_Call__c</fullName>
        <label>a.API &amp; Premium Features Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_API_Setup_Call_Date__c</fullName>
        <label>a.API Setup Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_App_Review_Date__c</fullName>
        <label>a.App Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_App_Review_Marketing_Call_Date__c</fullName>
        <label>a.App Review &amp; Marketing Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Approval_Date__c</fullName>
        <inlineHelpText>Currentor actual date for final approval from client.</inlineHelpText>
        <label>a.Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Artwork_Due_Date__c</fullName>
        <label>a.Artwork Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Content_Entered_in_CMS_Due_Date__c</fullName>
        <label>a.Content Entered in CMS Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_EC_Feature_Deep_Dive__c</fullName>
        <label>a.EC &amp; Feature Deep Dive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Final_Approval_Call__c</fullName>
        <label>a.Final Approval Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Graphics_Data_Due_Date__c</fullName>
        <label>a.Data &amp; Graphics Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Kickoff_Date__c</fullName>
        <inlineHelpText>Current or actual Kickoff Date.  Date the KO was originally planned to occur.</inlineHelpText>
        <label>a.Kickoff Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Marketing_Call_Date__c</fullName>
        <label>a.Marketing Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Post_Event_Debrief_Call__c</fullName>
        <label>a.Post Event Debrief Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Premium_Features_Call__c</fullName>
        <label>a.Premium Features Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Preview_Date__c</fullName>
        <inlineHelpText>Current or actual date for preview to be provided to customer.</inlineHelpText>
        <label>a.Preview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Project_Plan_Follow_up_Date__c</fullName>
        <label>a.Project Plan Follow up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Released_Date__c</fullName>
        <inlineHelpText>Current or actual date for release of app by iTunes.</inlineHelpText>
        <label>a.Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Setup_Call_Date__c</fullName>
        <label>a.Setup Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Submit_Date__c</fullName>
        <inlineHelpText>Current or actual date for submission of app to Apple.</inlineHelpText>
        <label>a.Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iOS_Build__c</fullName>
        <label>iOS Build #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iOS_Submission_by__c</fullName>
        <label>iOS Submission by</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>o_API_Premium_Features_Call__c</fullName>
        <label>o.API &amp; Premium Features Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_API_Setup_Call_Date__c</fullName>
        <label>o.API Setup Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_App_Review_Date__c</fullName>
        <label>o.App Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_App_Review_Marketing_Call_Date__c</fullName>
        <label>o.App Review &amp; Marketing Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Approval_Date__c</fullName>
        <inlineHelpText>Original date for final approval from client.</inlineHelpText>
        <label>o.Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Artwork_Due_Date__c</fullName>
        <label>o.Artwork Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Content_Entered_in_CMS_Due_Date__c</fullName>
        <label>o.Content Entered in CMS Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_EC_Feature_Deep_Dive__c</fullName>
        <label>o.EC &amp; Feature Deep Dive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Final_Approval_Call__c</fullName>
        <label>o.Final Approval Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Graphics_Data_Due_Date__c</fullName>
        <label>o.Data &amp; Graphics Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Kickoff_Call_Date__c</fullName>
        <inlineHelpText>Original Kickoff Date. Date the KO was originally planned to occur.</inlineHelpText>
        <label>o.Kickoff Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Marketing_Call_Date__c</fullName>
        <label>o.Marketing Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Post_Event_Debrief_Call__c</fullName>
        <label>o.Post Event Debrief Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Premium_Features_Call__c</fullName>
        <label>o.Premium Features Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Preview_Date__c</fullName>
        <inlineHelpText>Original date for preview to be provided to customer.</inlineHelpText>
        <label>o.Preview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Project_Plan_Follow_up_Date__c</fullName>
        <label>o.Project Plan Follow up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Released_Date__c</fullName>
        <inlineHelpText>Original date for release of app by all stores.</inlineHelpText>
        <label>o.Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Setup_Call_Date__c</fullName>
        <label>o.Setup Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>o_Submit_Date__c</fullName>
        <inlineHelpText>Original date for submission of app to Apple.</inlineHelpText>
        <label>o.Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Tasks_Reviewed__c</fullName>
        <label># of Tasks Reviewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Track Projects for Mobile App Builders in SF</description>
    <label>Mobile App</label>
    <nameField>
        <label>Mobile Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CC_Cards</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>o_Released_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed Out</value>
        </filters>
        <label>All CC Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CC_Cards_12</fullName>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>o_Released_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Contact__c</field>
            <operation>equals</operation>
            <value>Melinda Arndt</value>
        </filters>
        <label>All CC Cards 12</label>
        <language>en_US</language>
        <sharedTo>
            <role>Product_Consultant_CC</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CT_Mobile_Cards</fullName>
        <booleanFilter>1 AND (2 OR (3 AND 4)) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Level_of_Effort__c</columns>
        <columns>o_Submit_Date__c</columns>
        <columns>a_Submit_Date__c</columns>
        <columns>Ideal_App_Launch_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Adherence_to_Project_Plan_and_Timelines__c</columns>
        <columns>Product_Version__c</columns>
        <columns>Stage__c</columns>
        <columns>CSAT_age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobile_Card__c.Crowd_Torch</value>
        </filters>
        <filters>
            <field>a_Released_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2015</value>
        </filters>
        <filters>
            <field>o_Released_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2015</value>
        </filters>
        <filters>
            <field>a_Submit_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed Out,Cancelled,On Hold</value>
        </filters>
        <label>All CT Mobile Cards</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>RelationshipManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chirag_s_active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Ideal_App_Launch_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed Out,Cancelled,Approved &amp; Released</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>chohan</value>
        </filters>
        <label>Madhuri's active Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CrowdCompass_PC_OSS_Mobile_Card_View</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Account_New__c</columns>
        <columns>NAME</columns>
        <columns>Service_Tier__c</columns>
        <columns>Level_of_Effort__c</columns>
        <columns>Stage__c</columns>
        <columns>Number_of_Events__c</columns>
        <columns>Number_of_Events_Used__c</columns>
        <columns>Internal_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Pending Kick-Off,Pending Project Plan,On Hold,Pending Start,Ongoing Support</value>
        </filters>
        <filters>
            <field>Contract_Account_New__c</field>
            <operation>notEqual</operation>
            <value>CrowdCompass Training &amp; Development</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mobile_Card__c.Mobile_Ongoing_Strategic_Support</value>
        </filters>
        <label>CrowdCompass PC - OSS Mobile Card View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Project_Coordinator</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CrowdCompass_PC_Onb_Mobile_Card_View</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Account_New__c</columns>
        <columns>NAME</columns>
        <columns>Service_Tier__c</columns>
        <columns>Level_of_Effort__c</columns>
        <columns>Stage__c</columns>
        <columns>Ideal_App_Launch_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>o_Released_Date__c</columns>
        <columns>a_Released_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>,Pending Project Plan,Graphics &amp; Data,Preview &amp; Iterate,Pending Start</value>
        </filters>
        <filters>
            <field>Contract_Account_New__c</field>
            <operation>notEqual</operation>
            <value>CrowdCompass Training &amp; Development</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Mobile_Card__c.Mobile_Ongoing_Strategic_Support,Mobile_Card__c.Lanyon_Mobile</value>
        </filters>
        <filters>
            <field>Event_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/1/2018</value>
        </filters>
        <label>CrowdCompass PC - Onb Mobile Card View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Project_Coordinator</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Crowd_Compass_Leadership_Team_Mobile_Card</fullName>
        <filterScope>Queue</filterScope>
        <label>Crowd Compass Leadership Team</label>
        <queue>Crowd_Compass_Leadership_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Vishwa_Approved_Projects</fullName>
        <columns>NAME</columns>
        <columns>Ideal_App_Launch_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Approved &amp; Released,Event in Progress,Pending Closeout</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>vishwa</value>
        </filters>
        <label>Vishwa' Approved Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vishwa_s_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Ideal_App_Launch_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Approved &amp; Released,Event in Progress,Closed Out</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>vishwa</value>
        </filters>
        <label>Vishwa's Active Projects</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Crowd_Compass</fullName>
        <active>true</active>
        <label>CrowdCompass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Crowd_Torch</fullName>
        <active>true</active>
        <label>CrowdTorch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lanyon_Mobile</fullName>
        <active>true</active>
        <label>Lanyon Mobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Onboarding_Lite</fullName>
        <active>true</active>
        <label>Mobile - Onboarding Lite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Onboarding_Standard</fullName>
        <active>true</active>
        <label>Mobile - Onboarding Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Ongoing_Strategic_Support</fullName>
        <active>true</active>
        <label>Mobile - Ongoing Strategic Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSG_CrowdCompass</fullName>
        <active>true</active>
        <label>PSG - CrowdCompass</label>
    </recordTypes>
    <recordTypes>
        <fullName>QuickMobile</fullName>
        <active>true</active>
        <description>This record type is created as part of QuickMobile Migration</description>
        <label>QuickMobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>QuickMobile_Onboarding_Standard</fullName>
        <active>true</active>
        <description>This record type is created as part of QuickMobile Migration</description>
        <label>QuickMobile - Onboarding Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>QuickMobile_Ongoing_Strategic_Support</fullName>
        <active>true</active>
        <description>This record type is created as part of QuickMobile Migration</description>
        <label>QuickMobile - Ongoing Strategic Support</label>
    </recordTypes>
    <validationRules>
        <fullName>Approval_Release_Date_Required</fullName>
        <active>true</active>
        <description>Approval / Release Dates are required if changing the stage to Closed Out and Level of Effort or Attribute is not Self Service.</description>
        <errorConditionFormula>AND( 
RecordTypeId&lt;&gt;"0121N000000qshn", 
NOT(OR(INCLUDES(Attributes__c, "Self-Service"),ISPICKVAL(Level_of_Effort__c, "Self-Service"))), 
ISPICKVAL(Stage__c, "Closed Out"), 
OR( 
ISBLANK(o_Approval_Date__c), 
ISBLANK(a_Approval_Date__c), 
ISBLANK(a_Released_Date__c), 
ISBLANK(o_Released_Date__c) 
), 
OR( 
CONTAINS($User.Profile_Name__c, "Customer Care"), 
CONTAINS($User.Profile_Name__c, "Client Services Leadership"), 
CONTAINS($User.Profile_Name__c, "Client Services Quality") 
), 



NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
)</errorConditionFormula>
        <errorMessage>Please fill the details in the O. Approval/ O. Release/ A. Approval/ . A. Release dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CSAT_Percentage</fullName>
        <active>true</active>
        <description>Few people can edit this field</description>
        <errorConditionFormula>AND(
ISCHANGED( CSAT_age__c),
NOT(OR( $User.Email='sbhatia@cvent.com',$User.Email='rkonwar@cvent.com',$User.Email='aizhar@cvent.com',$User.Email='aabrol@cvent.com'))
)</errorConditionFormula>
        <errorMessage>You can't modify CSAT %age field. Please contact your manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CSAT_Scores_MobileCard</fullName>
        <active>true</active>
        <description>Except few people, no one can edit CSAT Scores</description>
        <errorConditionFormula>AND(
OR(ISCHANGED( Ease_of_App_build_process__c),
ISCHANGED( Understanding_your_needs__c),
ISCHANGED( Adherence_to_Project_Plan_and_Timelines__c),
ISCHANGED( Quality_of_deliverable_s__c),
ISCHANGED( Your_Relationship_Representative__c)),
NOT(OR( $User.Id = '00500000006y5WD', $User.Id ='00500000007JyCM'))
)</errorConditionFormula>
        <errorMessage>You don't have rights to enter/modify CSAT Scores</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CSAT_age_Values</fullName>
        <active>true</active>
        <description>CSAT %age should have values 0-100 only</description>
        <errorConditionFormula>OR(
CSAT_age__c  &gt; 1,
CSAT_age__c &lt; 0
)</errorConditionFormula>
        <errorMessage>CSAT %age should be between 0-100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Clear_Reason_for_Onboarding</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

OR(RecordType.DeveloperName = "Mobile_Onboarding_Lite",
RecordType.DeveloperName = "Mobile_Onboarding_Standard"
),

ISPICKVAL(Repeat_Onboarding__c,"N/A"),

Not(ISPICKVAL(Reason__c,"")),

ISPICKVAL(Stage__c,"Closed Out"),


NOT(CONTAINS( $User.Username, "deployment" ))

)</errorConditionFormula>
        <errorMessage>Please clear "Reason for Re-Onboarding"</errorMessage>
    </validationRules>
</CustomObject>